--- a/app/src/main/res/layout/activity_finance.xml
+++ b/app/src/main/res/layout/activity_finance.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/toolbarAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:titleTextColor="@color/colorPrimary" />
+                app:titleTextColor="#FFFFFF" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <ScrollView
@@ -48,12 +48,14 @@
                     android:layout_margin="8dp"
                     android:autofillHints=""
                     android:hint="@string/hint_financeTitle"
+                    android:textColorHint="#FFFFFF"
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
+                    android:
                     android:padding="8dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp" />
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/description"
@@ -61,12 +63,13 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:hint="@string/hint_financeDescription"
+                    android:textColorHint="#FFFFFF"
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
                     android:padding="8dp"
                     android:textColor="#FFFFFF"
-                    android:textSize="14sp"/>
+                    android:textSize="18sp"/>
 
                 <Button
                     android:id="@+id/chooseImage"
