--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -28,7 +28,7 @@
             android:hint="Enter password"
             android:inputType="textPassword" />
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/login1_button"
             android:layout_width="wrap_content"
             android:text="Log In"
             android:layout_height="wrap_content"
