--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -15,28 +15,23 @@
             android:hint="Enter your full name"
             android:layout_height="wrap_content"/>
 
-        <EditText
-            android:id="@+id/username_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter username"
-            android:inputType="textPassword" />
+
         <EditText
             android:id="@+id/password_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter password"
             android:inputType="textPassword" />
-        <Button
-            android:id="@+id/login1_button"
-            android:layout_width="wrap_content"
-            android:text="Log In"
+        <EditText
+            android:id="@+id/username_register"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:hint="Enter username" />
+
         <Button
-            android:id="@+id/save_button"
+            android:id="@+id/complete_button"
             android:layout_width="wrap_content"
-            android:text="Save"
+            android:text="Complete"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
     </LinearLayout>
