--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -1,38 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="20dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#050F4C"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:textColor="#FFFFFF"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher_foreground" />
         <EditText
             android:id="@+id/name_register"
             android:layout_width="match_parent"
-            android:hint="Enter your full name"
-            android:layout_height="wrap_content"/>
+            android:hint="Enter Full Name"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:textColorHint="#FFFFFF"
+            android:textColor="#FFFFFF"/>
 
 
         <EditText
             android:id="@+id/password_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter password"
-            android:inputType="textPassword" />
+            android:hint="Enter Password"
+            android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            android:textColorHint="#FFFFFF"
+            android:textColor="#FFFFFF"/>
         <EditText
             android:id="@+id/username_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter username" />
+            android:hint="Enter Username"
+            android:paddingLeft="20dp"
+            android:textColorHint="#FFFFFF"
+            android:textColor="#FFFFFF"/>
 
         <Button
             android:id="@+id/complete_button"
             android:layout_width="wrap_content"
             android:text="Complete"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="#000000"
+            android:textColor="#FFFFFF"
+            />
     </LinearLayout>
 </RelativeLayout>
