updated colour on map screen

--- a/app/src/main/res/layout/activity_finance_maps.xml
+++ b/app/src/main/res/layout/activity_finance_maps.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.FinanceMapsActivity">
+    tools:context=".activities.FinanceMapsActivity"
+    android:background="#050F4C">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
         android:fitsSystemWindows="true"
         app:elevation="0dip"
+        android:background="#050F4C"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <androidx.appcompat.widget.Toolbar
