--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:text="Log In"
-        android:background="@drawable/button_background"
+        android:background="#000000"
         android:layout_marginTop="20dp"
         android:textColor="#FFFFFF"/>
 
