--- a/app/src/main/res/layout/card_finance.xml
+++ b/app/src/main/res/layout/card_finance.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:background="#000000">
+        android:background="#0C1C81">
 
         <ImageView
             android:id="@+id/imageIcon"
